# openmd

./: .gitignore  AGENTS.md  README.md  RELEASING.md  note.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  release-desktop.yml
apps/client/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/client/scripts/: copy-monaco.sh
apps/client/src/: app.tsx  main.tsx
apps/desktop/: README.md  package.json
apps/desktop/scripts/: bundle-release-resources.mjs  dev-server.mjs  dev.mjs  dev.sh  setup-dev-sidecar.mjs  setup-rust.sh  stop-dev-server.sh  tauri-before-build.mjs  verify-collaboration-ws.mjs  verify-prod-bundle-ws.mjs
apps/desktop/src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  menu.rs  server.rs
apps/web/: next.config.mjs  package.json  server.mjs
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: desktop-bootstrap.tsx  menu-overlays.tsx  native-menu-listener.tsx  settings-provider.tsx
apps/web/hooks/: use-bib-completion.ts  use-bib-entries.ts  use-command-palette.ts  use-leafmark-export.ts  use-monaco-hard-wrap.ts  use-native-menu.ts
apps/web/lib/: command-registry.ts  export-markdown.ts  leafmark-client.ts  leafmark-server.mjs  live-share-client.ts  menu-actions.ts  tauri-client.ts  workspace-editor-kind.ts
apps/web/scripts/: build-tauri.mjs
apps/web/stores/: leafmark.store.ts  session.store.ts  (+1 more)
scripts/: release.mjs  sync-version.mjs
scripts/lib/: version.mjs
(+75 files in other folders)
